--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
                         <fieldset>
                             <legend>cauculadora</legend>
                             <input type="number"id="campo">
+                        </br>  
+                                <button id="btn_um" >1</button> 
+                                <button id="btn_dois" >2</button>
+                                <button id="btn_tres" >3</button> 
+                                <button id="btn_adicao" >+</button> 
+                                <button id="btn_porcetagem" >%</button>
+                                 
+                        </br>
                             <button id="btn_um" >1</button>
 
 
