--- a/insta.html
+++ b/insta.html
@@ -331,7 +331,7 @@
 
                 </div>
                 <div class="tres2">
-                    <p class="ptres2">Ri_souza13</p>
+                    <p class="ptres2">p.oliv3r</p>
                     
                 </div>
                 <div class="tres3">
